<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Authentication.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="28dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp60"/>

        <EditText
            android:id="@+id/mobile_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp60"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/round_background"
            android:drawableStart="@drawable/mobile_icon"
            android:drawablePadding="@dimen/dp10"
            android:hint="@string/number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingLeft="@dimen/dp20"
            android:paddingRight="@dimen/dp5"
            android:textColor="@color/black"
            android:textCursorDrawable="@drawable/cursor_drawable" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:layout_marginRight="@dimen/dp20"
            android:background="@drawable/round_background"
            android:drawableStart="@drawable/name_icon"
            android:drawablePadding="@dimen/dp10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/dp10"
            android:textCursorDrawable="@drawable/cursor_drawable"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp20"
                android:layout_marginTop="@dimen/dp60"
                android:layout_marginRight="@dimen/dp20"
                android:background="@drawable/round_background"
                android:backgroundTint="@color/light_blue"
                android:paddingTop="@dimen/dp10"
                android:paddingBottom="@dimen/dp10"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="@dimen/dp24"
                android:textStyle="bold" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/dp60"
                android:layout_height="@dimen/dp60"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/dp60"
                android:visibility="invisible"
                app:lottie_autoPlay="true"
                app:lottie_fileName="progress_bar.json"
                app:lottie_loop="true" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/dp24"
            android:layout_marginTop="@dimen/dp40"
            android:gravity="center"
            android:clickable="true"
            android:textStyle="bold"
            android:onClick="moveToRegistrationPage"/>

    </LinearLayout>

</ScrollView>